--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-clean-blog.git"
+  },
+  "dependencies": {
+    "image-map-resizer": "^1.0.3"
   }
 }
